# snapshot-skill

repo/: README.md  pyproject.toml
repo/demo/: demo_runner.py
repo/skills/time_machine/: __init__.py  audit.py  config.yaml  dvc_backend.py  errors.py  git_backend.py  skill.yaml  tm.py  utils.py  verifier.py
repo/tests/: test_diff.py  test_list.py  test_restore.py  test_snapshot.py
repo/tests/fixtures/sample_repo/: README.md
